# cen-grid-explore

./: README.md  pyproject.toml
data/: datos-de-desviacion-de-la-demanda-sistemica-july-00-23.tsv  datos-de-desviacion-de-la-demanda-sistemica-july-18-23.tsv
notebooks/: cen_explore copy.ipynb  cen_explore.ipynb
